# db-wrap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  FetchDepends.cmake  ProjectOptions.cmake  db-wrap-config.cmake.in
docs/: doxygen.conf  header.html  layout.xml
docs/en/: cursor.md  database.md  index.md  sql_utilities.md  uuid_utilities.md
docs/en/cpp/: def_groups.hpp
examples/: CMakeLists.txt  example_basic.cpp  example_motivating.cpp  example_sql_gen.cpp  example_transactions.cpp
include/db_wrap/: db_api.hpp  db_cursor.hpp  db_transaction.hpp  db_utils.hpp  sql_utils.hpp  table_traits.hpp  uuid_type.hpp
include/db_wrap/details/: backend_detect.hpp  pfr_utils.hpp  reflect.hpp  sql_impl.hpp  static_string.hpp  string_utils.hpp  unpack_fields_impl.hpp
tests/: CMakeLists.txt  unit-cursor.cpp  unit-postgres.cpp  unit-reflection.cpp  unit-traits.cpp  unit-utils.cpp
tests/scripts/: docker-compose.yml  postgres_wrapper.py
